--- a/css/customize.css
+++ b/css/customize.css
@@ -3,3 +3,7 @@ img.scale-with-grid {
   height: auto;
   display: block;
 }
+h6 {
+  font-size: 12px; /* or 11px if you want it even tighter */
+  font-weight: normal; /* optional: make it lighter */
+}
